# consuming-parser

./: CHANGELOG.md  LICENSE  README.md  consuming-parser.cabal  flake.nix  fourmolu.yaml  hie.yaml
.github/workflows/: default.yml
nix/haskell/: lib.nix
src/: Parser.hs  Tracer.hs
src/Control/: Alternative.hs
src/Control/Monad/Trans/: Failable.hs
src/Data/: Failable.hs  Natural.hs
src/Data/Natural/: Confined.hs  Finite.hs
src/Parser/: Combinators.hs  Consumption.hs  Core.hs  Error.hs  Misc.hs  TypeError.hs
src/Parser/Core/: Consumption.hs  Error.hs  Index.hs  State.hs
src/Parser/Example/: Json.hs  Parens.hs
src/Parser/Token/: Char.hs
