cabal-version:       3.0
name:                consuming-parser
version:             0.0.1.0
synopsis:            A parser with additional type safety by tracking guaranteed consumption
description:         TODO
license:             BSD-3-Clause
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/consuming-parser
bug-reports:         https://github.com/jumper149/consuming-parser/issues
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Control.Alternative
    Control.Monad.Trans.Failable
    Data.Failable
    Parser
    Parser.Combinators
  other-modules:
    Parser.Example.Parens
  build-depends:
    , base
    , containers
    , deriving-trans
    , monad-control
    , mtl
    , transformers
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
  ghc-options:
    -Wall
    -Wunused-packages
