cabal-version:       3.0
name:                consuming-parser
version:             0.0.1.0
synopsis:            A monadic parser with additional type safety by tracking guaranteed consumption
description:         TODO
license:             BSD-3-Clause
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/consuming-parser
bug-reports:         https://github.com/jumper149/consuming-parser/issues
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Control.Alternative
    Control.Monad.Trans.Failable
    Data.Failable
    Parser.Combinators
    Parser.Consumption
    Parser.Core
    Parser.Error
    Parser.Misc
    Parser.Token.Char
  other-modules:
    Parser.Example.Parens
  build-depends:
    , base
    , containers
    , deriving-trans
    , monad-control
    , mtl
    , transformers
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    FunctionalDependencies
    LambdaCase
    LexicalNegation
    FunctionalDependencies
    NumDecimals
    OverloadedStrings
    NoPatternGuards
    NoStarIsType
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
