cabal-version:       3.0
name:                consuming-parser
version:             0.0.1.0
synopsis:            A monadic parser with additional type safety by tracking guaranteed consumption
description:         TODO
license:             BSD-3-Clause
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/consuming-parser
bug-reports:         https://github.com/jumper149/consuming-parser/issues
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Parser.Combinators
    Parser.Core
    Parser.Core.Consumption
    Parser.Core.Error
    Parser.Core.Index
    Parser.Misc
    Parser.Token.Char
  other-modules:
    Parser.Example.Parens
  build-depends:
    , base
    , containers
    , deriving-trans
    , mtl
    , transformers
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    FunctionalDependencies
    LambdaCase
    LexicalNegation
    FunctionalDependencies
    NumDecimals
    OverloadedStrings
    NoPatternGuards
    NoStarIsType
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
